# WFiIS-PO-2019

LATO19_GR6_WK11_MOSZKOWICZ/: CMakeLists.txt  DynArray.h  main.cpp
LATO19_GR6_WK12_MOSZKOWICZ/: CMakeLists.txt  ClonesF.h  Cont.h  TemplatedCont.h  main.cpp
LATO19_GR6_WK13_MOSZKOWICZ/: CMakeLists.txt  Vect.h  main.h
LATO19_GR6_WK1_MOSZKOWICZ/: CMakeLists.txt  Kolo.h  Ksztalt.h  Kwadrat.h  Trojkat.h
LATO19_GR6_WK2_MOSZKOWICZ/: BitArray.cpp  BitArray.h  BitChanger.h  CMakeLists.txt
LATO19_GR6_WK3_MOSZKOWICZ/: CMakeLists.txt  InfoClass.cpp  InfoClass.h  InfoSmartPtr.cpp  InfoSmartPtr.h  PointerTest.cpp
LATO19_GR6_WK4_MOSZKOWICZ/: AccumulatingVisitor.cpp  AccumulatingVisitor.h  CMakeLists.txt  Data.h  ElData.h  PrintingVisitor.cpp  PrintingVisitor.h  Visitor.h  vtest.cpp
LATO19_GR6_WK6_MOSZKOWICZ/: AttColor.h  AttFormat.h  CMakeLists.txt  ConsolePrinter.cpp  ConsolePrinter.h  MyLine.cpp  MyLine.h  MyText.cpp  MyText.h  StringConvertable.h  printtest.cpp
LATO19_GR6_WK7_MOSZKOWICZ/: CMakeLists.txt  Doktorant.h  Dydaktyk.h  NumerId.h  Osoba.h  Pracownik.h  Student.h  Wozny.h  main.cpp  main.h
LATO19_GR6_WK8_MOSZKOWICZ/: CMakeLists.txt  Main.cpp  lab08.cpp  lab08.h
LATO19_GR6_WK9_MOSZKOWICZ/: CMakeLists.txt  Calc_error.cpp  Calc_error.h  Licznik_Poziomow.h  main.h
